# autotools_mvp

./: .gitignore  .ycm_extra_conf.py  Makefile.in  README.md  aclocal.m4  configure  configure.ac  configure~
autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
include/autotools_mvp/: logged_class.hpp  logging.h  uuid.h
lib/: Makefile.am  Makefile.in  logging.cxx  uuid.cxx
test/: Makefile.am  Makefile.in  main.cxx  test_logging.cxx  test_uuid.cxx
test/utils/: test_environment.cxx  test_environment.h
